# rjw-graph

./: CMakeLists.txt  PipelineGraph.html  README.md
cmake/: Findboost.cmake
include/: .clang-format  Edge.h  Node.h  edge.h  mesh.h  node.h
src/: edge.cc  edge.cpp  mesh.cc  node.cc  node.cpp
test/: mesh_test.cc  node_edge_test.cc  node_edge_test.cpp
